@@ -1,3 +1,4 @@
+* Update FedEx rates and added ability to auto-generate rate name from code that gets returned by FedEx [dennis]
 * Assume test_helper is in load path when running tests [cody]
 * Add support Kunaki rating service [cody]
 * Require active_support instead of activesupport to avoid deprecation warning in Rails 2.3.5 [cody]
